# auth-with-rust

./: Cargo.toml  README.md
src/: app.rs  auth_handler.rs  auth_routes.rs  error.rs  errros.rs  invitation_handler.rs  invitation_routes.rs  main.rs  models.rs  register_routes.rs  schema.rs  utils.rs
